objects/ASI_MFM_Brand__c.object
<CustomObject>
    <description>ASI MFM</description>
    <fields>
        <fullName>ASI_CRM_CN_Billing_Brand_Group__c</fullName>
        <label>Billing Brand Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Imperial</fullName>
                </value>
                <value>
                    <fullName>Non-Imperial</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Bottle_Collection_Rate__c</fullName>
        <label>Bottle Collection Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand_Group_c__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Group</label>
        <referenceTo>ASI_CRM_CN_Brand_Group__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Brand_owner__c</fullName>
        <label>Brand Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Category__c</fullName>
        <formula>ASI_TH_CRM_Sub_category__r.ASI_CRM_CN_Product_Category__r.ASI_HK_CRM_English_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Name__c</fullName>
        <label>Chinese Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manufacturer1</fullName>
                </value>
                <value>
                    <fullName>保乐力加</fullName>
                </value>
                <value>
                    <fullName>MHD</fullName>
                </value>
                <value>
                    <fullName>百富门</fullName>
                </value>
                <value>
                    <fullName>百加得</fullName>
                </value>
                <value>
                    <fullName>帝亚吉欧</fullName>
                </value>
                <value>
                    <fullName>人马君度</fullName>
                </value>
                <value>
                    <fullName>寰盛</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Key_Account_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Account Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalBrandDescription__c</fullName>
        <label>Local Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_LocalCompany__c</fullName>
        <label>Local Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Prompt_Payment_Rate__c</fullName>
        <label>Prompt Payment Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Company__c</fullName>
        <label>Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PRT</fullName>
                </value>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Matisse</fullName>
                </value>
                <value>
                    <fullName>Maxxium</fullName>
                </value>
                <value>
                    <fullName>WGS</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>Remy</fullName>
                </value>
                <value>
                    <fullName>Spey</fullName>
                </value>
                <value>
                    <fullName>Suntory</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_FOC_ID_15__c</fullName>
        <formula>LEFT( Id , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID(15)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_English_Name__c</fullName>
        <label>English Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Brand_Key__c</fullName>
        <externalId>true</externalId>
        <label>Product Brand</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_HK_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SequenceNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Description__c</fullName>
        <label>Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Brand External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_MFM_Brand_Grouping__c</fullName>
        <label>Brand Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Company_Code__c</fullName>
        <label>Company Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reporting_Brand_Desc__c</fullName>
        <label>Reporting Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <description>The value is only allow:
PRADF 
PRJDF</description>
        <label>TR Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>ASI_TH_CRM_Category__c</referenceTo>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>ASI_TH_CRM_Segment__c</referenceTo>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Sub_category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-category</label>
        <referenceTo>ASI_TH_CRM_Sub_category__c</referenceTo>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_TH_CRM_Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_CRM_JP_Brand</value>
        </filters>
        <label>All JP CRM Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_TW_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_TH_CRM_Sub_category__c</columns>
        <columns>ASI_CRM_TW_Company__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_TW_Brand</value>
        </filters>
        <label>TW Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_TH_CRM_BRAND</value>
        </filters>
        <label>All TH Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CN_FOC_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_CRM_CN_Brand_Group_c__c</columns>
        <columns>ASI_CRM_CN_Brand_owner__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_CRM_CN_Chinese_Name__c</columns>
        <columns>ASI_HK_CRM_English_Name__c</columns>
        <columns>ASI_CRM_CN_Manufacturer__c</columns>
        <columns>ASI_TH_CRM_Sub_category__c</columns>
        <columns>ASI_HK_CRM_Product_Brand_Key__c</columns>
        <columns>ASI_HK_CRM_Sequence__c</columns>
        <columns>ASI_CRM_CN_Competitor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_FOC_CN_Brand</value>
        </filters>
        <label>All CN FOC Brand</label>
        <language>en_GB</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_GF_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_GF_Brand</value>
        </filters>
        <label>All GF Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_GF</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_HK_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_HK_CRM_Brand</value>
        </filters>
        <label>All HK Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_HK_CRM</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_JP_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>ASI_MFM_Brand_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_TH_CRM_Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_JP_Brand</value>
        </filters>
        <label>All JP Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_JP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_Brand</fullName>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>ASI_MFM_Reporting_Brand_Desc__c</columns>
        <columns>ASI_CRM_CN_Brand_Group_c__c</columns>
        <columns>ASI_KOR_SequenceNumber__c</columns>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_KR_Brand</value>
        </filters>
        <label>All KR Brand</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MY_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_CRM_Company__c</columns>
        <columns>ASI_CRM_CN_Competitor__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_MY_Brand</value>
        </filters>
        <label>All MY Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MY_Competitor_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_CRM_Company__c</columns>
        <columns>ASI_CRM_CN_Competitor__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_MY_Brand</value>
        </filters>
        <filters>
            <field>ASI_CRM_CN_Competitor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All MY Competitor Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RM_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_RM_Brand</value>
        </filters>
        <label>All RM Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_PRA_Regional_Marketing</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SG_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_CRM_Prompt_Payment_Rate__c</columns>
        <columns>ASI_CRM_CN_Competitor__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_CRM_SG_Brand</value>
        </filters>
        <label>All SG Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_SG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TR_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_TR_Brand</value>
        </filters>
        <label>All TR Brands</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_DFPM_Pernod_Ricard_Asia_Duty_Free</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TW_Brand</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_MFM_TW_Brand</value>
        </filters>
        <label>All TW Brand</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_MFM_TW_PR</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_VN_Brands</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Brand_Code__c</columns>
        <columns>ASI_MFM_Brand_Description__c</columns>
        <columns>ASI_CRM_Company__c</columns>
        <columns>ASI_CRM_CN_Competitor__c</columns>
        <columns>ASI_HK_CRM_Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Brand__c.ASI_CRM_VN_Brand</value>
        </filters>
        <label>All VN Brands</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Brand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <recordTypes>
        <fullName>ASI_CN_NPL_Brand</fullName>
        <active>true</active>
        <label>CN NPL Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Brand</fullName>
        <active>true</active>
        <description>ASI_CRM_JP_Brand</description>
        <label>JP CRM Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MO_Brand</fullName>
        <active>true</active>
        <label>MO Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Brand</fullName>
        <active>true</active>
        <label>SG Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Brand</fullName>
        <active>true</active>
        <label>VN Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_FOC_CN_Brand</fullName>
        <active>true</active>
        <description>used for FOC</description>
        <label>CN FOC Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_HK_CRM_Brand</fullName>
        <active>true</active>
        <label>HK CRM Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_JP_Brand</fullName>
        <active>true</active>
        <label>JP Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Brand</fullName>
        <active>true</active>
        <description>CN MFM use</description>
        <label>CN MFM Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_GF_Brand</fullName>
        <active>true</active>
        <label>GF Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_KR_Brand</fullName>
        <active>true</active>
        <label>KR Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_MY_Brand</fullName>
        <active>true</active>
        <label>MY Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_RM_Brand</fullName>
        <active>true</active>
        <label>RM Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TR_Brand</fullName>
        <active>true</active>
        <label>TR Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_TW_Brand</fullName>
        <active>true</active>
        <label>TW Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_BRAND</fullName>
        <active>true</active>
        <label>TH CRM BRAND</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>